fix: toArray guards, DATA to /data, cache-bust

--- a/index.html
+++ b/index.html
@@ -85,6 +85,6 @@
   </div>
 
   <!-- 중요: defer 로드 -->
-  <script src="app.js?v=20250814-090556"></script>
+  <script src="app.js?v=1755163707"></script>
 </body>
 </html>
